--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Detail.cshtml
@@ -14,9 +14,11 @@
                     <div class="text-start">
                         <h3 class="mb-3">@Model.CompanyName</h3>
                         <h3 class="mb-4">@Model.Category</h3>
+                    </div>
                         <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>@Model.Location</span>
                         <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>@Model.Type</span>
                         <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>@Model.SalaryRange</span>
+                        <span class="text-truncate me-0"><i class="far bi bi-envelope  text-primary me-2"></i>@Model.Email</span>
                     </div>
                 </div>
 
