--- a/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row justify-content-start mt-3">
         <div class="col-10 col-lg-8">
-            <h1 class="display-3 text-black animated slideInDown mb-4">იპოვე თქვენთვის სასურველი სამსაური</h1>
+            <h1 class="display-3 text-black animated slideInDown mb-4">იპოვე თქვენთვის სასურველი სამსახური</h1>
             <div class="row">
                 @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
                 {
