--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Update.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Update.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.Vacancies.Models
+@using Hackathon_CV_Portal.Domain.Enums
 @using Hackathon_CV_Portal.Web.Models.VacancyModels
 @model VacancyModel
 
@@ -38,7 +39,7 @@
                                 <div class="form-group">
                                     <label asp-for="Type"></label>
                                     <span class="text-danger">*</span>
-                                    <select asp-for="Type" class="custom-select mr-sm-2" asp-items="ViewBag.Types">
+                                    <select id="TypeSelector" asp-for="Type" class="custom-select mr-sm-2" asp-items="ViewBag.Types">
                                         <option value="0">აირჩიეთ ტიპი</option>
                                     </select>
                                     <span asp-validation-for="Type" class="text-danger"></span>
@@ -103,3 +104,11 @@
         </div>
     </div>
 </div>
+
+@{int type = (int)(Enum.Parse<VacancyType>(Model.Type));}
+
+<script>
+    $(document).ready(function(){
+        $("#TypeSelector [value='@type']")[0].selected = true;
+    })
+</script>
