--- a/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 @model RegisterDto
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "რეგისტრაცია";
 }
 
 <section class="vh-100">
