--- a/src/Hackathon_CV_Portal.Web/Views/AppliedCurriculumVitae/Apply.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/AppliedCurriculumVitae/Apply.cshtml
@@ -1,4 +1,8 @@
-﻿<html>
+﻿@{
+    ViewData["Title"] = "წარმატების სტატუსი";
+}
+
+<html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
   </head>
