--- a/src/Hackathon_CV_Portal.Web/Views/AppliedCurriculumVitae/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/AppliedCurriculumVitae/Index.cshtml
@@ -4,6 +4,11 @@
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @inject SignInManager<ApplicationUser> SignInManager
+
+@{
+    ViewData["Title"] = "ვაკანსიები";
+}
+
 @model AppliedCurriculumVitaesVM
 
     <div class="container-xxl py-5">
