--- a/src/Hackathon_CV_Portal.Web/Views/Category/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Category/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model ICollection<CategoryVM>
 
+@{
+    ViewData["Title"] = "კატეგორიები";
+}
+
 
 <div class="container my-5 pt-5 pb-4">
     <h1 class="display-3 text-center  mb-3 animated slideInDown">კატეგორიები</h1>
