restyle Contact page

--- a/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
@@ -23,9 +23,9 @@
         <div class="row g-4 text-center mt-4">
             <h2>ახალციხის კოლეჯი "ოპიზარი"</h2>
             <div class="col-12">
-                <div class="row gy-4">
+                <div class="row gy-4 mb-2 mt-2">
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-map-marker-alt text-primary"></i>
@@ -34,16 +34,16 @@
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-envelope-open text-primary"></i>
                             </div>
-                            <span> <a href="mailto: opizari2011@gmail.com">ფოსტა</a></span>
+                            <span> <a href="mailto: opizari2011@gmail.com">opizari2011@gmail.com</a></span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-phone-alt text-primary"></i>
@@ -52,21 +52,21 @@
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="bi bi-facebook text-secondary" aria-hidden="true"></i>
                             </div>
-                            <span> <a href="https://www.facebook.com/%E1%83%A1%E1%83%A1%E1%83%98%E1%83%9E-%E1%83%99%E1%83%9D%E1%83%9A%E1%83%94%E1%83%AF%E1%83%98-%E1%83%9D%E1%83%9E%E1%83%98%E1%83%96%E1%83%90%E1%83%A0%E1%83%98-805903136163386/" style="color:#3737db;">ოპიზარი</a> </span>
+                            <span> <a href="https://www.facebook.com/%E1%83%A1%E1%83%A1%E1%83%98%E1%83%9E-%E1%83%99%E1%83%9D%E1%83%9A%E1%83%94%E1%83%AF%E1%83%98-%E1%83%9D%E1%83%9E%E1%83%98%E1%83%96%E1%83%90%E1%83%A0%E1%83%98-805903136163386/" style="color:#3737db;">facebook.com/ოპიზარი</a> </span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="bi bi-compass text-primary" aria-hidden="true"></i>
                             </div>
-                            <span> <a href="http://opizarivet.ge/">ოპიზარი</a> </span>
+                            <span> <a href="http://opizarivet.ge/">opizarivet.ge</a> </span>
                         </div>
                     </div>
                 </div>
@@ -83,9 +83,9 @@
         <div class="row g-4 text-center mt-4">
             <h2>კაჭრეთის კოლეჯი "აისი"</h2>
             <div class="col-12">
-                <div class="row gy-4">
+                <div class="row gy-4 mb-2 mt-2">
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-map-marker-alt text-primary"></i>
@@ -94,16 +94,16 @@
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-envelope-open text-primary"></i>
                             </div>
-                            <span><a href="mailto: kachreti@gmail.com">ფოსტა</a></span>
+                            <span><a href="mailto: kachreti@gmail.com">kachreti@gmail.com</a></span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-phone-alt text-primary"></i>
@@ -112,21 +112,21 @@
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="bi bi-facebook text-secondary" aria-hidden="true"></i>
                             </div>
-                            <span> <a href="https://www.facebook.com/CollegeAisi" style="color:#3737db;">აისი</a> </span>
+                            <span> <a href="https://www.facebook.com/CollegeAisi" style="color:#3737db;">facebook.com/აისი</a> </span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="bi bi-compass text-primary" aria-hidden="true"></i>
                             </div>
-                            <span> <a href="http://www.collegeaisi.ge/">აისი</a> </span>
+                            <span> <a href="http://www.collegeaisi.ge/">collegeaisi.ge</a> </span>
                         </div>
                     </div>
                 </div>
@@ -143,9 +143,9 @@
         <div class="row g-4 text-center mt-4">
             <h2>ილია წინამძღვრიშვილის სახელობის კოლეჯი</h2>
             <div class="col-12">
-                <div class="row gy-4">
+                <div class="row gy-4 mb-2 mt-2">
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-map-marker-alt text-primary"></i>
@@ -154,16 +154,16 @@
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-envelope-open text-primary"></i>
                             </div>
-                            <span><a href="mailto: tmkcollege@tmk.edu.ge">ფოსტა</a></span>
+                            <span><a href="mailto: tmkcollege@tmk.edu.ge">tmkcollege@tmk.edu.ge</a></span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="fa fa-phone-alt text-primary"></i>
@@ -172,21 +172,21 @@
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="bi bi-facebook text-secondary" aria-hidden="true"></i>
                             </div>
-                            <span> <a href="https://www.facebook.com/%E1%83%A1%E1%83%A1%E1%83%98%E1%83%9E-%E1%83%98%E1%83%9A%E1%83%98%E1%83%90-%E1%83%AC%E1%83%98%E1%83%9C%E1%83%90%E1%83%9B%E1%83%AB%E1%83%A6%E1%83%95%E1%83%A0%E1%83%98%E1%83%A8%E1%83%95%E1%83%98%E1%83%9A%E1%83%98%E1%83%A1-%E1%83%A1%E1%83%90%E1%83%AE%E1%83%94%E1%83%9A%E1%83%9D%E1%83%91%E1%83%98%E1%83%A1-%E1%83%99%E1%83%9D%E1%83%9A%E1%83%94%E1%83%AF%E1%83%98-1765470457072557/" style="color:#3737db;">ილია წინამძღვრიშვილის სახელობის კოლეჯი</a> </span>
+                            <span> <a href="https://www.facebook.com/%E1%83%A1%E1%83%A1%E1%83%98%E1%83%9E-%E1%83%98%E1%83%9A%E1%83%98%E1%83%90-%E1%83%AC%E1%83%98%E1%83%9C%E1%83%90%E1%83%9B%E1%83%AB%E1%83%A6%E1%83%95%E1%83%A0%E1%83%98%E1%83%A8%E1%83%95%E1%83%98%E1%83%9A%E1%83%98%E1%83%A1-%E1%83%A1%E1%83%90%E1%83%AE%E1%83%94%E1%83%9A%E1%83%9D%E1%83%91%E1%83%98%E1%83%A1-%E1%83%99%E1%83%9D%E1%83%9A%E1%83%94%E1%83%AF%E1%83%98-1765470457072557/" style="color:#3737db;">facebook.com/ილია წინამძღვრიშვილის სახელობის კოლეჯი</a> </span>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center bg-light rounded p-4">
+                        <div class="d-flex align-items-center bg-light rounded px-4">
                             <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
                                  style="width: 45px; height: 45px;">
                                 <i class="bi bi-compass text-primary" aria-hidden="true"></i>
                             </div>
-                            <span> <a href="https://tmk.edu.ge/">ილია წინამძღვრიშვილის სახელობის კოლეჯი</a> </span>
+                            <span> <a href="https://tmk.edu.ge/">tmk.edu.ge</a> </span>
                         </div>
                     </div>
 
