--- a/src/Hackathon_CV_Portal.Web/Views/About/Edit.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/About/Edit.cshtml
@@ -1,6 +1,10 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.AboutUs.Models;
 @model AboutVM
 
+@{
+    ViewData["Title"] = "ჩვენს შესახებ / რედაქტირება";
+}
+
 <div class="row">
     <div class="container-fluid mb-1 mt-1 d-flex justify-content-center align-items-center">
         <div class="mt-2">
