--- a/src/Hackathon_CV_Portal.Web/Views/About/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/About/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.AboutUs.Models
 @model AboutVM
 
+@{
+    ViewData["Title"] = "ჩვენს შესახებ";
+}
 
 <div class="row">
     <div>
