--- a/src/Hackathon_CV_Portal.Web/Views/User/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/User/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.Users.Models
 @model UsersVM
 
+@{
+    ViewData["Title"] = "მომხმარებლები";
+}
+
 <div class="bg #f8f8f8">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <div class="container">
