--- a/src/Hackathon_CV_Portal.Web/Views/UserRole/Manage.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/UserRole/Manage.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.UserRoles.Models
 @model List<ManageUserRolesModel>
 @{
-    ViewData["Title"] = "Manage";
+    ViewData["Title"] = "როლების მართვა";
 }
 <form method="post">
     <div class="card">
